Add Upgrade button with Stripe checkout links

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                     annual: "Annuel",
                     discount: "-20%",
                     free: { name: "🆓 Free Brain", price: "Gratuit", features: ["4 modes binauraux", "2 fréquences pures", "Guide de respiration", "Sessions limitées à 5 min"] },
-                    premium: { name: "🧠 Nu Brain", priceMonthly: "4.99 CHF / mois", priceAnnual: "3.99 CHF / mois", billedAnnual: "Facturé 47.90 CHF / an", features: ["Tout Free Brain +", "Sessions illimitées", "Fréquences personnalisées", "Patterns respiratoires avancés"] }
+                    premium: { name: "🧠 Nu Brain", priceMonthly: "4.99 CHF / mois", priceAnnual: "3.99 CHF / mois", billedAnnual: "Facturé 47.90 CHF / an", features: ["Tout Free Brain +", "Sessions illimitées", "Fréquences personnalisées", "Patterns respiratoires avancés"], btnSubscribe: "S'abonner maintenant" }
                 },
                 settingsModal: {
                     title: "⚙️ Réglages",
@@ -867,7 +867,7 @@
                     annual: "Annual",
                     discount: "-20%",
                     free: { name: "🆓 Free Brain", price: "Free", features: ["4 binaural modes", "2 pure frequencies", "Breathing guide", "Sessions limited to 5 min"] },
-                    premium: { name: "🧠 Nu Brain", priceMonthly: "4.99 CHF / month", priceAnnual: "3.99 CHF / month", billedAnnual: "Billed 47.90 CHF / year", features: ["Everything in Free Brain +", "Unlimited sessions", "Custom frequencies", "Advanced breathing patterns"] }
+                    premium: { name: "🧠 Nu Brain", priceMonthly: "4.99 CHF / month", priceAnnual: "3.99 CHF / month", billedAnnual: "Billed 47.90 CHF / year", features: ["Everything in Free Brain +", "Unlimited sessions", "Custom frequencies", "Advanced breathing patterns"], btnSubscribe: "Subscribe Now" }
                 },
                 settingsModal: {
                     title: "⚙️ Settings",
@@ -1005,6 +1005,7 @@
             updatePriceDisplay();
 
             document.getElementById('premiumPlanFeatures').innerHTML = t.premiumModal.premium.features.map(f => `<li>✓ ${f}</li>`).join('');
+            document.getElementById('btnSubscribe').textContent = t.premiumModal.premium.btnSubscribe;
 
             // Settings Modal
             // Settings Modal
@@ -1360,6 +1361,14 @@
                 lblAnnual.classList.remove('active');
             }
         }
+
+        function goToCheckout() {
+            if (isAnnual) {
+                window.location.href = "https://buy.stripe.com/test_aFa00c9rV6GJ6Yz9aocbC01";
+            } else {
+                window.location.href = "https://buy.stripe.com/test_7sYfZa33xd57gz92M0cbC00";
+            }
+        }
     </script>
 
     <!-- Footer Navigation -->
@@ -1484,6 +1493,9 @@
                     <li>✓ Sans publicité</li>
                     <li>✓ Mode hors-ligne</li>
                 </ul>
+                <button id="btnSubscribe" onclick="goToCheckout()"
+                    style="width:100%; margin-top:15px; background:var(--primary); color:white; border:none; padding:12px; border-radius:10px; font-weight:700; cursor:pointer;">S'abonner
+                    maintenant</button>
             </div>
         </div>
     </div>
