Open Stripe checkout in new tab

--- a/index.html
+++ b/index.html
@@ -1364,9 +1364,9 @@
 
         function goToCheckout() {
             if (isAnnual) {
-                window.location.href = "https://buy.stripe.com/test_aFa00c9rV6GJ6Yz9aocbC01";
+                window.open("https://buy.stripe.com/test_aFa00c9rV6GJ6Yz9aocbC01", "_blank");
             } else {
-                window.location.href = "https://buy.stripe.com/test_7sYfZa33xd57gz92M0cbC00";
+                window.open("https://buy.stripe.com/test_7sYfZa33xd57gz92M0cbC00", "_blank");
             }
         }
     </script>
