--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
             <div class="controls">
                 <div class="time-slider-container">
                     <span>Durée</span>
-                    <input type="range" id="timeSlider" min="5" max="5" value="5" step="5">
+                    <input type="range" id="timeSlider" min="1" max="60" value="5" step="1">
                     <span id="timeDisplay" style="width: 45px; text-align: right;">5m</span>
                 </div>
             </div>
@@ -898,10 +898,21 @@
         };
 
         // État Global
+        let userPlan = localStorage.getItem('nu_brain_plan') || 'free';
         let currentMode = 'relax';
         let isRunning = false;
         let audioCtx, oscL, oscR, gainNode, intervalTimer;
         let timeLeft = 300; // default 5 min for Free tier
+
+        // Check for Stripe return
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.get('success') === 'true' || urlParams.get('payment_status') === 'success') {
+            userPlan = 'premium';
+            localStorage.setItem('nu_brain_plan', 'premium');
+            // Clean URL slightly to avoid re-triggering (optional but good UX)
+            window.history.replaceState({}, document.title, window.location.pathname);
+            setTimeout(() => alert("Bienvenue dans NU BRAiN ! Votre abonnement est actif."), 500);
+        }
 
         // Éléments DOM
         const btnMain = document.getElementById('mainBtn');
@@ -1011,9 +1022,26 @@
             // Settings Modal
             document.getElementById('settingsModalTitle').textContent = t.settingsModal.title;
             document.getElementById('lblCurrentPlan').textContent = t.settingsModal.currentPlan;
-            document.getElementById('valCurrentPlan').textContent = t.settingsModal.planName;
+
+            // Dynamic Plan Display
+            const planBadge = document.getElementById('valCurrentPlan');
+            const statusVal = document.getElementById('valStatus');
+
+            if (userPlan === 'premium') {
+                planBadge.textContent = "NU BRAiN";
+                planBadge.style.background = "linear-gradient(135deg, #9F7AEA 0%, #4A90E2 100%)";
+                planBadge.style.color = "white";
+                statusVal.textContent = "Premium Actif";
+            } else {
+                planBadge.textContent = "Free Brain";
+                planBadge.style.background = "rgba(74, 144, 226, 0.1)";
+                planBadge.style.color = "var(--primary)";
+                statusVal.textContent = t.settingsModal.statusValue;
+            }
+
             document.getElementById('lblStatus').textContent = t.settingsModal.statusLabel;
-            document.getElementById('valStatus').textContent = t.settingsModal.statusValue;
+            // removed redundant valStatus set
+            document.getElementById('lblRenewal').textContent = t.settingsModal.renewalLabel;
             document.getElementById('lblRenewal').textContent = t.settingsModal.renewalLabel;
             document.getElementById('valRenewal').textContent = t.settingsModal.renewalValue;
             document.getElementById('lblUsage').textContent = t.settingsModal.usageLabel;
@@ -1022,6 +1050,16 @@
 
             document.getElementById('btnCancelSub').textContent = t.settingsModal.cancelBtn;
             document.getElementById('noteCancelSub').textContent = t.settingsModal.cancelNote;
+
+            // Logic to hide/show cancel button based on plan
+            if (userPlan === 'free') {
+                document.getElementById('btnCancelSub').style.display = 'none';
+                document.getElementById('noteCancelSub').style.display = 'none';
+            } else {
+                document.getElementById('btnCancelSub').style.display = 'block';
+                document.getElementById('noteCancelSub').style.display = 'block';
+            }
+
             document.getElementById('btnSupport').textContent = t.settingsModal.supportBtn;
             document.getElementById('btnBack').textContent = t.settingsModal.dashboardBtn;
         }
@@ -1065,9 +1103,19 @@
 
             // Sync Slider only if not running (logic update)
             if (!isRunning) {
-                timeSlider.value = config.duration;
-                timeLeft = config.duration * 60;
-                timeDisplay.textContent = config.duration + 'm';
+                let duration = config.duration;
+
+                // Enforce Plan Limits
+                if (userPlan === 'free') {
+                    duration = Math.min(duration, 5); // Cap at 5 mins
+                    timeSlider.max = 5;
+                } else {
+                    timeSlider.max = 60; // Unlock full range
+                }
+
+                timeSlider.value = duration;
+                timeLeft = duration * 60;
+                timeDisplay.textContent = duration + 'm';
             }
         }
 
@@ -1522,6 +1570,12 @@
                 <span id="lblUsage" class="settings-label">Temps d'écoute</span>
                 <span id="valUsage" class="settings-value">0 min</span>
             </div>
+
+            <!-- Temporary Restore/Dev Button for troublehooting -->
+            <button onclick="localStorage.setItem('nu_brain_plan', 'premium'); window.location.reload();"
+                style="font-size: 0.8rem; color: var(--text-light); background: none; border: none; text-decoration: underline; cursor: pointer; margin-top: 10px; width: 100%;">
+                Restaurer / Activer Premium (Debug)
+            </button>
 
             <button id="btnCancelSub" class="btn-outline-danger">Annuler l'abonnement</button>
             <div id="noteCancelSub" class="settings-note">Arrête le renouvellement. Le compte reste Pro jusqu'à la fin
