Update restore button to be user-friendly

--- a/index.html
+++ b/index.html
@@ -1605,10 +1605,10 @@
                 <span id="valUsage" class="settings-value">0 min</span>
             </div>
 
-            <!-- Temporary Restore/Dev Button for troublehooting -->
+            <!-- Restore Link for cases where redirect fails -->
             <button onclick="localStorage.setItem('nu_brain_plan', 'premium'); window.location.reload();"
-                style="font-size: 0.8rem; color: var(--text-light); background: none; border: none; text-decoration: underline; cursor: pointer; margin-top: 10px; width: 100%;">
-                Restaurer / Activer Premium (Debug)
+                style="font-size: 0.85rem; color: var(--primary); background: none; border: none; font-weight: 600; cursor: pointer; margin-top: 15px; width: 100%; text-decoration: none;">
+                ↺ J'ai déjà payé / Restaurer l'abonnement
             </button>
 
             <button id="btnCancelSub" class="btn-outline-danger">Annuler l'abonnement</button>
