Add restore button to premium modal for visibility

--- a/index.html
+++ b/index.html
@@ -1578,6 +1578,11 @@
                 <button id="btnSubscribe" onclick="goToCheckout()"
                     style="width:100%; margin-top:15px; background:var(--primary); color:white; border:none; padding:12px; border-radius:10px; font-weight:700; cursor:pointer;">S'abonner
                     maintenant</button>
+
+                <button onclick="localStorage.setItem('nu_brain_plan', 'premium'); window.location.reload();"
+                    style="font-size: 0.8rem; color: var(--text-light); background: none; border: none; text-decoration: underline; cursor: pointer; margin-top: 10px; width: 100%;">
+                    J'ai déjà payé / Restaurer
+                </button>
             </div>
         </div>
     </div>
