--- a/index.html
+++ b/index.html
@@ -1605,12 +1605,7 @@
                 <span id="valUsage" class="settings-value">0 min</span>
             </div>
 
-            <!-- Admin Restore (Password Protected) -->
-            <button
-                onclick="if(prompt('Admin Password:') === 'admin') { localStorage.setItem('nu_brain_plan', 'premium'); window.location.reload(); }"
-                style="font-size: 0.8rem; color: var(--text-light); background: none; border: none; text-decoration: underline; cursor: pointer; margin-top: 20px; width: 100%; opacity: 0.3;">
-                Admin / Debug
-            </button>
+            <!-- No debug buttons for production -->
 
             <button id="btnCancelSub" class="btn-outline-danger">Annuler l'abonnement</button>
             <div id="noteCancelSub" class="settings-note">Arrête le renouvellement. Le compte reste Pro jusqu'à la fin
