--- a/index.html
+++ b/index.html
@@ -1605,7 +1605,25 @@
                 <span id="valUsage" class="settings-value">0 min</span>
             </div>
 
-            <!-- No debug buttons for production -->
+            <!-- Dev Mode Only (Hidden in Production) -->
+            <div id="devTools" style="display: none; border-top: 1px dashed #ccc; margin-top: 20px; padding-top: 10px;">
+                <p style="font-size: 0.7rem; color: #aaa; margin-bottom: 5px;">Développeur (Localhost Uniquement)</p>
+                <button onclick="localStorage.setItem('nu_brain_plan', 'premium'); window.location.reload();"
+                    style="font-size: 0.8rem; color: var(--primary); background: none; border: none; text-decoration: underline; cursor: pointer;">
+                    [DEV] Simuler Success Stripe
+                </button>
+                <button onclick="localStorage.removeItem('nu_brain_plan'); window.location.reload();"
+                    style="font-size: 0.8rem; color: var(--danger); background: none; border: none; text-decoration: underline; cursor: pointer; margin-left: 10px;">
+                    [DEV] Reset Free
+                </button>
+            </div>
+
+            <script>
+                // Show Dev Tools only on Localhost
+                if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+                    document.getElementById('devTools').style.display = 'block';
+                }
+            </script>
 
             <button id="btnCancelSub" class="btn-outline-danger">Annuler l'abonnement</button>
             <div id="noteCancelSub" class="settings-note">Arrête le renouvellement. Le compte reste Pro jusqu'à la fin
