--- a/index.html
+++ b/index.html
@@ -1379,7 +1379,8 @@
 
         // --- Modal Functions ---
         function openModal(modalId) {
-            document.getElementById(modalId).classList.add('active');
+            updateModalsLanguage(); // Force UI refresh before showing
+            document.getElementById(modalId).style.display = 'flex';
             document.body.style.overflow = 'hidden';
         }
 
@@ -1642,8 +1643,9 @@
             </div>
 
             <script>
-                // Show Dev Tools only on Localhost
-                if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+                // Show Dev Tools on Localhost OR if URL contains ?debug=1
+                const urlParamsDebug = new URLSearchParams(window.location.search);
+                if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' || urlParamsDebug.has('debug')) {
                     document.getElementById('devTools').style.display = 'block';
                 }
             </script>
