--- a/index.html
+++ b/index.html
@@ -1421,14 +1421,14 @@
         }
 
         function closeModal(modalId) {
-            document.getElementById(modalId).classList.remove('active');
+            document.getElementById(modalId).style.display = 'none';
             document.body.style.overflow = 'auto';
         }
 
         // Close modal on overlay click
         document.addEventListener('click', (e) => {
             if (e.target.classList.contains('modal-overlay')) {
-                e.target.classList.remove('active');
+                e.target.style.display = 'none';
                 document.body.style.overflow = 'auto';
             }
         });
